--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -127,6 +127,50 @@
     height: 70px;
 }
 
+.details-button-container {
+    margin-top: 0.5rem;
+    display: flex;
+    justify-content: center; 
+    width: 100%; 
+}
+
+.details-overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 9999;
+    align-items: center;
+    justify-content: center;
+}
+
+.details-content {
+    background-color: #fff;
+    padding: 1rem;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    text-align: center;
+}
+
+.close-details-button {
+    position: absolute;
+    bottom: 60px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 30px;
+    height: 25px;
+    background-color: red;
+    color: white;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.3rem;
+    cursor: pointer;
+    border-radius: 50%;
+}
 .pagination {
     display: flex;
     flex-direction: row;
@@ -151,6 +195,7 @@
         grid-template-columns: 1fr 1fr;
     }
 }
+
 
 @media screen and (min-width: 576px) {
     .pokemons {
